WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199083
[iOS] Evernote crashes when creating a note
https://bugs.webkit.org/show_bug.cgi?id=199083
Summary
[iOS] Evernote crashes when creating a note
Daniel Bates
Reported
2019-06-20 15:26:34 PDT
Evernote crashes when creating a note in iOS 13.
Attachments
Patch
(6.86 KB, patch)
2019-06-20 15:45 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
Patch
(6.86 KB, patch)
2019-06-20 15:51 PDT
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Daniel Bates
Comment 1
2019-06-20 15:26:43 PDT
<
rdar://problem/51759247
>
Daniel Bates
Comment 2
2019-06-20 15:45:36 PDT
Created
attachment 372595
[details]
Patch
Daniel Bates
Comment 3
2019-06-20 15:49:08 PDT
Comment on
attachment 372595
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=372595&action=review
> Source/WebKit/UIProcess/ios/WKContentView.mm:210 > + class_addMethod(self.class, @selector(keyCommands), reinterpret_cast<IMP>(&keyCommandsPlaceHolderHackForEvernote), method_getTypeEncoding(class_getInstanceMethod(self.class, @selector(keyCommands))));
placeholder is one word
Daniel Bates
Comment 4
2019-06-20 15:51:00 PDT
Created
attachment 372596
[details]
Patch
Brent Fulgham
Comment 5
2019-06-20 17:03:54 PDT
Comment on
attachment 372596
[details]
Patch So gross, Evernote. Boo!! r=me
Daniel Bates
Comment 6
2019-06-20 17:49:17 PDT
Comment on
attachment 372596
[details]
Patch Clearing flags on attachment: 372596 Committed
r246664
: <
https://trac.webkit.org/changeset/246664
>
Daniel Bates
Comment 7
2019-06-20 17:49:19 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug